hahn/d_64-f_8-l_1-h_2/my_job_170591.err
  File "/dartfs-hpc/rc/home/q/d28979q/hahn/boolean_function_sensitivity/hahn/d_64-f_8-l_1-h_2/../losses_linear_spectrum_no_overlap.py", line 165
    print("rows[i] in set? " + str(rows[i] in rowColSet)
         ^
SyntaxError: '(' was never closed
